# pytest-fmu-filter

./: .bumpversion.toml  .pre-commit-config.yaml  LICENSE  Makefile  README.md  README.rst  pyproject.toml  tox.ini
.github/workflows/: ci.yml  release.yml
schema/fmi3/: fmi3LayeredStandardManifest.xsd
src/pytest_fmu_filter/: md.py  plugin.py
tests/: test_fmu_filter.py  test_md.py  utils.py
